--- a/cats-app/src/App.css
+++ b/cats-app/src/App.css
@@ -1,3 +1,7 @@
+.cats-main {
+    padding: 10px;
+    margin: 20px;
+}
 .header {
     display: flex;
     background-color: #111111;
@@ -7,11 +11,20 @@
     padding: 5px;
     margin: 10px;
 }
+
+a {
+    text-decoration: none;
+    color:white;
+}
 .cat {
     width: 250px;
     height: 150px;
     border: 1px solid blue;
-    border-radius: 50%;
+    border-radius: 8px;
     margin: 10px;
     padding: 5px;
+}
+.close-button {
+    text-align: right;
+    color: red;
 }
