Links added for React

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,8 +5,8 @@
     <title>Home</title>
 </head>
 <body>
-    <h2>Home</h2>
-    <p>Hello!</p>
+    <h2>Spring Boot Home</h2>
+    <p>Hello from Spring Boot</p>
     <a href="/cats">Cats</a>
 </body>
 </html>
